src/public/scss/components/_hover-options.scss
.hover-options {
  @include displayFlex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  // top: 0;
  top: 50%;
  left: 0;
  width: 100%;
  transform: translate(0, -50%);
  max-height: 0*$em;
  padding: 0 .2*$em;
  background-color: rgba(black, .4);
  text-align: center;
  overflow-y: auto;
  overflow-x: auto;
  > * {
    display: inline-block;
    margin: .5*$em 0;
    padding: .2*$em;
    border-radius: .2*$em;
    background-color: $primary;
    color: black;
    cursor: pointer;
    a {
      text-decoration: none;
      word-wrap: break-word;
    }
  }
  .follow {}
  .append-stream {}
}

